force-app/main/default/objects/SIOC__VendorResponse__c/SIOC__VendorResponse__c.object-meta.xml
<CustomObject>
    <label>Vendor Response</label>
    <nameField>
        <displayFormat>VR-{00000}</displayFormat>
        <label>Vendor Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>