force-app/main/default/objects/SIOC__VendorResponse__c/fields/SIOC__Bureau__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Bureau__c</fullName>
    <description>Name of Bureau</description>
    <label>Bureau</label>
    <length>50</length>
    <type>Text</type>
</CustomField>