force-app/main/default/objects/SIOC__VendorResponse__c/fields/SIOC__Decision__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Decision__c</fullName>
    <description>Decision</description>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FAIL</fullName>
            </value>
            <value>
                <fullName>PASS</fullName>
            </value>
            <value>
                <fullName>REVIEW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>