force-app/main/default/objects/SIOC__VendorResponse__c/fields/SIOC__ReportDate__c.field-meta.xml
<CustomField>
    <fullName>SIOC__ReportDate__c</fullName>
    <description>This field contains the timestamp of the Vendor Response.</description>
    <label>ReportDate</label>
    <type>DateTime</type>
</CustomField>