force-app/main/default/objects/SIOC__VendorResponse__c/fields/SIOC__Status__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Status__c</fullName>
    <description>The system automatically populates this required text field with the status for this application.</description>
    <inlineHelpText>This system-populated required field displays the status for this application.</inlineHelpText>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>